--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span class="material-symbols-outlined text-[#137fec] text-3xl"> school </span>
     <h2 class="text-xl font-bold tracking-tight text-gray-900">Professor João de Deus</h2>
     </div>
-    <nav class="hidden items-center gap-8 md:flex">
+    <nav class=" items-center gap-8 md:flex">
     <a class="text-base font-medium text-gray-600 transition-colors hover:text-[#137fec]" href="index.html">Início</a>
     <a class="text-base font-medium text-gray-600 transition-colors hover:text-[#137fec]" href="modulos.html">Módulos</a>
     <a class="text-base font-medium text-gray-600 transition-colors hover:text-[#137fec]" href="aulas.html">Vídeos</a>
@@ -164,4 +164,5 @@
     </footer>
     </div>
     
+
     </body></html>
