--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <a class="text-base font-medium text-gray-600 transition-colors hover:text-[#137fec]" href="contacto.html">Contacto</a>
     </nav>
     <div class="flex items-center gap-4">
-    <button class="hidden items-center justify-center rounded-md bg-gray-100 px-4 py-2 text-sm font-semibold text-gray-800 transition-colors hover:bg-gray-200 sm:flex">
+    <button class=" items-center justify-center rounded-md bg-gray-100 px-4 py-2 text-sm font-semibold text-gray-800 transition-colors hover:bg-gray-200 sm:flex">
                   Entrar
                 </button>
-    <button class="md:hidden">
-    <span class="material-symbols-outlined text-2xl">menu</span>
-    </button>
+    
     </div>
     </div>
     </header>
@@ -166,3 +164,4 @@
     
 
     </body></html>
+
