--- a/contacto.html
+++ b/contacto.html
@@ -80,7 +80,7 @@
 <h1 class="text-xl font-bold tracking-tight">Professor João de Deus</h1>
 </a>
 </div>
-<nav class="hidden items-center gap-8 md:flex">
+<nav class=" items-center gap-8 md:flex">
 <a class="nav-link" href="index.html">Início</a>
 <a class="nav-link" href="modulos.html">Cursos</a>
 <a class="nav-link" href="sobre.html">Sobre</a>
@@ -308,5 +308,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 })();
 </script>
+
 
 </body></html>
