--- a/modulos.html
+++ b/modulos.html
@@ -44,7 +44,7 @@
 <span class="material-symbols-outlined text-[var(--primary-color)] text-3xl">school</span>
 <span class="text-xl font-bold text-gray-800">Professor João de Deus</span>
 </a>
-<div class="hidden md:flex items-center space-x-6">
+<div class=" md:flex items-center space-x-6">
 <a class="text-gray-600 hover:text-[var(--primary-color)] transition-colors" href="index.html">Início</a>
 <a class="text-[var(--primary-color)] font-semibold border-b-2 border-[var(--primary-color)] pb-1" href="modulos.html">Módulos</a>
 <a class="text-gray-600 hover:text-[var(--primary-color)] transition-colors" href="sobre.html">Sobre</a>
@@ -227,5 +227,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
 
 </body></html>
