--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
                 </span>
     <span class="text-xl font-bold tracking-tight text-gray-900">De Deus</span>
     </a>
-    <nav class="hidden items-center gap-6 md:flex">
+    <nav class=" items-center gap-6 md:flex">
     <a class="text-sm font-medium text-gray-600 transition-colors hover:text-primary-600" href="index.html">Início</a>
     <a class="text-sm font-medium text-gray-600 transition-colors hover:text-primary-600" href="modulos.html">Cursos</a>
     <a class="text-sm font-semibold text-primary-600" href="sobre.html">Sobre</a>
@@ -113,4 +113,5 @@
     </footer>
     </div>
     
+
     </body></html>
