--- a/aulas.html
+++ b/aulas.html
@@ -260,7 +260,7 @@
             <div class="playlist-item active" 
                  role="listitem"
                  tabindex="0"
-                 data-video-id="1RhuLDAgrP0"
+                 data-video-id="69PulYNXpzM"
                  data-title="Aula 1: Introdução à Informática"
                  data-description="Nesta aula, vamos explorar os conceitos básicos da informática, incluindo histórico, componentes básicos e manipulação de dados fundamentais."
                  data-lesson="1"
@@ -279,17 +279,17 @@
             <div class="playlist-item" 
                  role="listitem"
                  tabindex="0"
-                 data-video-id="xFrGuyw1V8s"
-                 data-title="Aula 2: Componentes do Computador"
-                 data-description="Nesta aula, vamos conhecer os principais componentes de um computador e como eles funcionam em conjunto para processar informações."
+                 data-video-id="TN0lqI2ABTw"
+                 data-title="Aula 2: Manipular directórios/pastas e ficheiros"
+                 data-description="Nesta aula, vamos fazer a manipulação basica de directórios/pastas e ficheiros em um computador."
                  data-lesson="2"
-                 aria-label="Reproduzir Aula 2: Componentes do Computador">
+                 aria-label="Reproduzir Aula 2: Manipular directórios/pastas e ficheiros">
               
               <div class="flex items-center gap-3 p-4 pr-8 relative">
                 <span class="material-symbols-outlined text-2xl">smart_display</span>
                 <div class="flex-1 min-w-0">
-                  <h4 class="font-medium text-gray-900 truncate">Aula 2: Componentes do Computador</h4>
-                  <p class="text-sm text-gray-500 mt-1">Hardware essencial</p>
+                  <h4 class="font-medium text-gray-900 truncate">Aula 2: Manipular directórios/pastas e ficheiros</h4>
+                  <p class="text-sm text-gray-500 mt-1">Software essencial</p>
                 </div>
                 <div class="progress-indicator"></div>
               </div>
@@ -298,16 +298,16 @@
             <div class="playlist-item" 
                  role="listitem"
                  tabindex="0"
-                 data-video-id="b2jd-Fv-CU"
-                 data-title="Aula 3: Sistemas Operacionais"
-                 data-description="Vamos explorar o que são sistemas operacionais, suas funções principais e como gerenciam os recursos do computador."
+                 data-video-id="6_YRZhzs8AM"
+                 data-title="Aula 3: Consultar e buscar informação da Internet"
+                 data-description="Vamos explorar o como consultar e buscar informação da Internet, principais motores de busca e como gerenciam a informação."
                  data-lesson="3"
-                 aria-label="Reproduzir Aula 3: Sistemas Operacionais">
+                 aria-label="Reproduzir Aula 3: Consultar e buscar informação da Internet">
               
               <div class="flex items-center gap-3 p-4 pr-8 relative">
                 <span class="material-symbols-outlined text-2xl">smart_display</span>
                 <div class="flex-1 min-w-0">
-                  <h4 class="font-medium text-gray-900 truncate">Aula 3: Sistemas Operacionais</h4>
+                  <h4 class="font-medium text-gray-900 truncate">Aula 3: Consultar e buscar informação da Internet</h4>
                   <p class="text-sm text-gray-500 mt-1">Software de sistema</p>
                 </div>
                 <div class="progress-indicator"></div>
@@ -569,4 +569,5 @@
     const coursePlayer = new CoursePlayer();
   </script>
 </body>
+
 </html>
