--- a/aulas.html
+++ b/aulas.html
@@ -333,7 +333,7 @@
     class CoursePlayer {
       constructor() {
         this.player = null;
-        this.currentVideoId = "1RhuLDAgrP0";
+        this.currentVideoId = "69PulYNXpzM";
         this.totalLessons = 3;
         this.currentLesson = 1;
         this.completedLessons = new Set();
@@ -571,3 +571,4 @@
 </body>
 
 </html>
+
